version 1.2.2
support Java 11